# tomcats

./: CHANGELOG.md  cabal.project  tomcats.cabal
demo/: demo.cabal
src/: Tomcats.hs
src/Data/HashMap/: Total.hs
src/Tomcats/: AlphaZero.hs  TwoPlayer.hs
src/Tomcats/AlphaZero/: Double.hs  Float.hs  Shared.hs
src/Tomcats/Vanilla/: Multiplayer.hs  TwoPlayer.hs
