cabal-version:      2.4
name:               tomcats
version:            0.1.0.0
synopsis:           toMCaTS is a Monte Carlo Tree Search implementation

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            BSD-3-Clause
author:             Daniel Wagner
maintainer:         me@dmwit.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Data.HashMap.Total,
                      Tomcats,
                      Tomcats.AlphaZero,
                      Tomcats.Vanilla.Multiplayer,
                      Tomcats.Vanilla.TwoPlayer

    -- Tomcats.TwoPlayer is not exposed, but almost everything in it is
    -- re-exported elsewhere; it's just a way for multiple exposed modules to
    -- share some code.
    other-modules:    Tomcats.TwoPlayer

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      base ^>=4.14.1.0
                      , hashable ^>=1.4
                      , mwc-random ^>=0.15
                      , random ^>=1.2
                      , transformers ^>=0.6
                      , unordered-containers ^>=0.2
                      , vector ^>=0.13
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wno-tabs

executable tomcats-demo-tic-tac-toe-two-player
    main-is:          two-player.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      base ^>=4.14.1.0
                      , array ^>=0.5
                      , hashable ^>=1.4
                      , tomcats ^>=0.1
                      , unordered-containers ^>=0.2
    hs-source-dirs:   bin
    default-language: Haskell2010
    ghc-options:      -Wno-tabs -O2

executable tomcats-demo-tic-tac-toe-multiplayer
    main-is:          multiplayer.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      base ^>=4.14.1.0
                      , array ^>=0.5
                      , hashable ^>=1.4
                      , tomcats ^>=0.1
                      , unordered-containers ^>=0.2
    hs-source-dirs:   bin
    default-language: Haskell2010
    ghc-options:      -Wno-tabs -O2

executable tomcats-demo-tic-tac-toe-alphazero
    main-is:          alphazero.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      base ^>=4.14.1.0
                      , array ^>=0.5
                      , hashable ^>=1.4
                      , tomcats ^>=0.1
                      , unordered-containers ^>=0.2
    hs-source-dirs:   bin
    default-language: Haskell2010
    ghc-options:      -Wno-tabs -O2
