cabal-version:      2.4
name:               tomcats
version:            0.1.0.0
synopsis:           toMCaTS is a Monte Carlo Tree Search implementation

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:            BSD-3-Clause
author:             Daniel Wagner
maintainer:         me@dmwit.com

copyright:          2022 Daniel Wagner
category:           AI
extra-source-files: CHANGELOG.md

common basics
    default-language: Haskell2010
    ghc-options:      -Wno-tabs -O2
    build-depends:      base >=4.14 && <4.17
                      , hashable ^>=1.4
                      , unordered-containers ^>=0.2

common executable
    import:           basics
    hs-source-dirs:   bin
    build-depends:      tomcats
                      , array ^>=0.5

library
    import:           basics
    hs-source-dirs:   src
    exposed-modules:  Data.HashMap.Total,
                      Tomcats,
                      Tomcats.AlphaZero,
                      Tomcats.Vanilla.Multiplayer,
                      Tomcats.Vanilla.TwoPlayer

    -- Tomcats.TwoPlayer is not exposed, but almost everything in it is
    -- re-exported elsewhere; it's just a way for multiple exposed modules to
    -- share some code.
    other-modules:    Tomcats.TwoPlayer

    build-depends:      aeson >=2.1 && <2.3
                      , mwc-random ^>=0.15
                      , random ^>=1.2
                      , transformers ^>=0.5 || ^>=0.6
                      , vector ^>=0.12 || ^>=0.13

executable tomcats-demo-two-player
    import:           executable
    main-is:          two-player.hs

executable tomcats-demo-multiplayer
    import:           executable
    main-is:          multiplayer.hs

executable tomcats-demo-alphazero
    import:           executable
    main-is:          alphazero.hs
