cabal-version:      2.4
name:               tomcats-demo
version:            0.1.0.0

synopsis:           A bare-bones game of Tic-Tac-Toe to demonstrate how to use the tomcats library

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            BSD-3-Clause
author:             Daniel Wagner
maintainer:         me@dmwit.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable tomcats-demo-tic-tac-toe-two-player
    main-is:          two-player.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      base ^>=4.14.1.0
                      , array ^>=0.5
                      , hashable ^>=1.4
                      , tomcats ^>=0.1
                      , unordered-containers ^>=0.2
    hs-source-dirs:   bin
    default-language: Haskell2010
    ghc-options:      -Wno-tabs -O2

executable tomcats-demo-tic-tac-toe-multiplayer
    main-is:          multiplayer.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      base ^>=4.14.1.0
                      , array ^>=0.5
                      , hashable ^>=1.4
                      , tomcats ^>=0.1
                      , unordered-containers ^>=0.2
    hs-source-dirs:   bin
    default-language: Haskell2010
    ghc-options:      -Wno-tabs -O2
